replaced Long(long) deprecated in Java 9 with Long.valueOf(long)